tests/compile-fail/return_type_mismatch.si
// Compile-fail test: return type mismatch
// Expected error: Function 'greet' returns Named("int") but body has type Named("str")

@greet (name: str) -> int = "Hello, " + name
